Light theme of the project. | Set the max-width of cards to 17rem due to responsive issue on mobile devices.

--- a/src/components/loading-animation/loading-animation.styles.scss
+++ b/src/components/loading-animation/loading-animation.styles.scss
@@ -10,11 +10,11 @@
   margin-bottom: 3em;
 
   & h1 {
-    color: #fff;
+    color: #212121;
   }
   & button {
     margin: 1.5em;
-    background: chartreuse;
+    background: #1e90ff;
     border: none;
     width: 5em;
     height: 5.5em;
@@ -78,7 +78,7 @@
 }
 
 .spinner-grow {
-  background: chartreuse;
+  background: #1e90ff;
   display: inline-block;
   width: 2rem;
   height: 2rem;
